--- a/web/index.html
+++ b/web/index.html
@@ -45,6 +45,9 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+  <script type="text/javascript">
+  window.flutterWebRenderer = "html";
+</script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhbodOoBP15CKF9qorZDGslVPWtQBLiN8"></script>
   <script>
